<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.isah.vocabtrainer.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_add"
        android:title="@string/menu_title_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_grammar"
        android:orderInCategory="100"
        android:title="@string/menu_title_grammar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_title_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/menu_title_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/menu_title_info"
        app:showAsAction="never"/>
</menu>
