<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.isah.vocabtrainer.AddWordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerWordPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/wordPrefixes"
                android:spinnerMode="dropdown"></Spinner>

            <EditText
                android:id="@+id/editTextSwedish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_text_hint_swedish"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextGrammar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_text_hint_grammar"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextGerman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_text_hint_german"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_text_hint_remarks"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/checkBoxIncomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/add_checkbox_incomplete"/>

            <Button
                android:id="@+id/buttonAddWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addWord"
                android:text="@string/add_button_text_add" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
