<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.isah.vocabtrainer.VocabTrainingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLearningSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonTrainingSwedishGerman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_button_text_swedish_german" />

            <Button
                android:id="@+id/buttonTrainingGermanSwedish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_button_text_german_swedish" />

            <Button
                android:id="@+id/buttonResetLearningProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_button_text_reset_progress"/>

            <Button
                android:id="@+id/buttonUpdateVocabList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_button_text_update_list" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>