<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.isah.vocabtrainer.OtherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDictReload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="reloadDictionary"
                android:text="@string/dict_button_text_reload"/>

            <Button
                android:id="@+id/buttonDictExport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="exportWords"
                android:text="@string/dict_button_text_export"/>

            <Button
                android:id="@+id/buttonDictImport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="importWords"
                android:text="@string/dict_button_text_import" />

            <View
                android:id="@+id/viewSpace"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonShowDebugInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showDebugInfo"
                android:text="@string/main_button_text_debug_info"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>