<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.isah.vocabtrainer.ShowWordDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewShowWordDetailsHeadingSwedish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_text_swedish"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewShowWordDetailsSwedish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewShowWordDetailsHeadingGerman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_text_german"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewShowWordDetailsGerman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewShowWordDetailsHeadingRemark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_text_remark"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewShowWordDetailsRemark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewShowWordDetailsHeadingComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_text_complete"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewShowWordDetailsComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewShowWordDetailsHeadingLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_text_lists"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewShowWordDetailsLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/buttonEditWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editWord"
                android:text="@string/details_button_test_edit" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
