<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.isah.vocabtrainer.WordOfTheDayFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonUpdateWordOfTheDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_word_button_update" />


        <TextView
            android:id="@+id/textViewShowWordDetailsHeadingSwedish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_text_swedish"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewWordOftTheDaySwedish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewShowWordDetailsHeadingGerman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_text_german"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewWordOftTheDayGerman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewShowWordDetailsHeadingRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_text_remark"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewWordOftTheDayRemarks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</RelativeLayout>